[gd_scene load_steps=2 format=3 uid="uid://b8uo3t6romngi"]

[ext_resource type="Script" path="res://Scripts/Menus_Scripts/new_game_or_continue.gd" id="1_be1oh"]

[node name="NewGame_Or_Continue" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_be1oh")

[node name="New_Game_Button" type="Button" parent="."]
layout_mode = 0
offset_left = 378.0
offset_top = 150.0
offset_right = 748.0
offset_bottom = 265.0
theme_override_font_sizes/font_size = 50
text = "New Game"

[node name="Continue_Button" type="Button" parent="."]
layout_mode = 0
offset_left = 378.0
offset_top = 321.0
offset_right = 748.0
offset_bottom = 436.0
theme_override_font_sizes/font_size = 50
text = "Continue"

[node name="Go_Back_Button" type="Button" parent="."]
layout_mode = 0
offset_left = 1072.0
offset_top = 6.0
offset_right = 1144.0
offset_bottom = 69.0
theme_override_font_sizes/font_size = 40
text = "X"

[connection signal="button_up" from="New_Game_Button" to="." method="_on_new_game_button_button_up"]
[connection signal="button_up" from="Continue_Button" to="." method="_on_continue_button_button_up"]
[connection signal="button_up" from="Go_Back_Button" to="." method="_on_go_back_button_button_up"]
